5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1723_2498.log
== TEST (2019-05-09 11:27:29) 
-- CODE:
a = int(input("hab. A: "))
b = int(input("hab. B: "))
pa = float(input("c. p. A: "))
pb = float(input("c.p.B: "))

percA = pa/100
percB = pb/100

ano = 0

while(hA < hB):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
	
print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(hA < hB):
NameError: name 'hA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:27:53) 
-- CODE:
a = int(input("hab. A: "))
b = int(input("hab. B: "))
pa = float(input("c. p. A: "))
pb = float(input("c.p.B: "))

percA = pa/100
percB = pb/100

ano = 0

while(a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
	
print(ano)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:28:25) 
-- CODE:
a = int(input("hab. A: "))
b = int(input("hab. B: "))
pa = float(input("c. p. A: "))
pb = float(input("c.p.B: "))

percA = pa/100
percB = pb/100

ano = 0

while(a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
	
print(ano)
-- EXECUTION TIME:
0.180241
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
